--- a/templates/task.html
+++ b/templates/task.html
@@ -13,16 +13,27 @@
 </head>
 
 <body>
-    <h1 class="text-center my-3 p-3">タスク一覧</h1>
     <div class="container">
-        <div class="row">
+        <div class="row p-5">
             <div class="col-lg-2 bg-light">
                 <nav class="nav flex-column">
                     <button type="button" class="btn btn-secondary my-3 text-white btn-lg" data-bs-toggle="modal" data-bs-target="#taskModal">タスク追加</button>
                     <a type="button" class="btn btn-secondary mb-3 text-white btn-lg" href="{{ url_for('completed') }}">完了済みタスク</a>
                 </nav>
             </div>
+
             <div class="col-lg-10">
+                <div class="text-center">
+                    <h1>タスク一覧</h1>
+                    <div class="d-flex flex-row-reverse">
+                        <a href="{{ url_for('logout') }}" class="btn btn-secondary text-white btn-lg">ログアウト</a>
+                    </div>
+                </div>
+                <!-- <div class="d-flex flex-row-reverse">
+                    <a href="{{ url_for('logout') }}" class="btn btn-secondary text-white btn-lg">ログアウト</a>
+                </div> -->
+                    
+                
                 <div class="row">
                     {% if tasks %}
                         {% for task in tasks %}
@@ -50,7 +61,6 @@
             </div>
         </div>
     </div>
-    
 
         <!-- モーダルのHTML -->
     <div class="modal fade" id="taskModal" tabindex="-1" aria-labelledby="taskModalLabel" aria-hidden="true">
