--- a/templates/completed.html
+++ b/templates/completed.html
@@ -11,7 +11,7 @@
     <title>完了済みタスク</title>
 </head>
 <body>
-    <h1 class="text-center my-3 p-3">完了済みタスク</h1>
+    <h1 class="text-center mb-3 p-5">完了済みタスク</h1>
     <div class="section">
         <div class="container">
             <div class="row">
@@ -32,11 +32,11 @@
                         </div>
                     {% endfor %}
                 {% else %}
-                    <p class="text-center">完了済みのタスクはありません</p>
+                    <h3 class="text-center">完了済みのタスクはありません</h3>
                 {% endif %}
             </div>
         </div>
-        <a type='button' class="btn btn-secondary text-white btn-lg mx-auto d-block w-25 my-5" href="{{ url_for('task') }}">タスク一覧画面に戻る</a>
+        <a type='button' class="btn btn-secondary text-white btn-lg mx-auto d-block w-25 my-5" href="{{ url_for('task') }}">タスク一覧</a>
     </div>
 </body>
 </html>
