--- a/templates/task.html
+++ b/templates/task.html
@@ -14,7 +14,11 @@
 
 <body>
     <div class="container">
-        <div class="row p-5">
+        <div class="d-flex justify-content-between align-items-center p-5">
+            <h1 class="flex-grow-1 text-center">タスク一覧</h1>
+            <a href="{{ url_for('logout') }}" class="btn btn-secondary text-white btn-lg">ログアウト</a>
+        </div>
+        <div class="row">
             <div class="col-lg-2 bg-light">
                 <nav class="nav flex-column">
                     <button type="button" class="btn btn-secondary my-3 text-white btn-lg" data-bs-toggle="modal" data-bs-target="#taskModal">タスク追加</button>
@@ -23,12 +27,12 @@
             </div>
 
             <div class="col-lg-10">
-                <div class="text-center">
-                    <h1>タスク一覧</h1>
-                    <div class="d-flex flex-row-reverse">
-                        <a href="{{ url_for('logout') }}" class="btn btn-secondary text-white btn-lg">ログアウト</a>
-                    </div>
-                </div>
+                <!-- <div class="text-center mb-3">
+                    <h1>タスク一覧</h1> -->
+                    <!-- <div class="d-flex flex-row-reverse">
+                        <a href="{{ url_for('logout') }}" class="btn btn-secondary text-white btn-lg">ログアウト</a> -->
+                    <!-- </div> -->
+                <!-- </div> -->
                 <!-- <div class="d-flex flex-row-reverse">
                     <a href="{{ url_for('logout') }}" class="btn btn-secondary text-white btn-lg">ログアウト</a>
                 </div> -->
