--- a/templates/task.html
+++ b/templates/task.html
@@ -27,17 +27,6 @@
             </div>
 
             <div class="col-lg-10">
-                <!-- <div class="text-center mb-3">
-                    <h1>タスク一覧</h1> -->
-                    <!-- <div class="d-flex flex-row-reverse">
-                        <a href="{{ url_for('logout') }}" class="btn btn-secondary text-white btn-lg">ログアウト</a> -->
-                    <!-- </div> -->
-                <!-- </div> -->
-                <!-- <div class="d-flex flex-row-reverse">
-                    <a href="{{ url_for('logout') }}" class="btn btn-secondary text-white btn-lg">ログアウト</a>
-                </div> -->
-                    
-                
                 <div class="row">
                     {% if tasks %}
                         {% for task in tasks %}
@@ -49,10 +38,10 @@
                                         <p class="card-text">{{ task.details }}</p>
                                         <form action="{{ url_for('complete_task') }}" method="post">
                                             <input type="hidden" name="task_id" value="{{ task.id }}">
-                                            <button class="btn btn-outline-primary btn-sm">完了</button>
+                                            <button class="btn btn-outline-primary btn-sm my-1">完了</button>
                                         </form>
                                         <form method="POST" action="{{ url_for('delete_task', task_id=task.id) }}">
-                                            <button type="submit" class="btn btn-outline-danger btn-sm">削除</button>
+                                            <button type="submit" class="btn btn-outline-danger btn-sm my-1">削除</button>
                                         </form>
                                     </div>
                                 </div>
