カテゴリのvalue修正

--- a/templates/task.html
+++ b/templates/task.html
@@ -81,12 +81,12 @@
                         <div class="mb-3">
                             <label for="category" class="form-label">カテゴリー</label>
                             <select class="form-select" id="category" name="category">
-                                <option value="仕事">課題</option>
+                                <option value="課題">課題</option>
                                 <option value="趣味">趣味</option>
-                                <option value="趣味">仕事</option>
-                                <option value="趣味">健康</option>
-                                <option value="趣味">買い物</option>
-                                <option value="趣味">学習</option>
+                                <option value="仕事">仕事</option>
+                                <option value="健康">健康</option>
+                                <option value="買い物">買い物</option>
+                                <option value="学習">学習</option>
                                 <option value="その他">その他</option>
                             </select>
                         </div>
